--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,6 @@ services:
     image: mysql:5.7
     environment:
       MYSQL_ROOT_PASSWORD: ""
-      MYSQL_DATABASE: gestion_des_notes
+      MYSQL_DATABASE: gestion_des_notes.sql
     ports:
       - "3306:3306"
